--- a/src/pages/Home/HomePage.module.css
+++ b/src/pages/Home/HomePage.module.css
@@ -10,6 +10,6 @@
 @media (max-width: 768px) {
   .wrapper {
     padding-bottom: 4rem;
-    align-items: flex-start;
+    align-items: center;
   }
 }
