--- a/src/pages/Gallery/GalleryPage.module.css
+++ b/src/pages/Gallery/GalleryPage.module.css
@@ -46,13 +46,16 @@
 }
 
 .subtitle {
-  font-size: 1.1rem;
-  font-weight: 400;
+  width: fit-content;
+  height: 33px;
+  font-size: 18px;
+  font-weight: 500;
   color: rgba(255, 255, 255, 0.9);
-  line-height: 1.7;
   letter-spacing: 0.01em;
   font-style: italic;
   margin-top: 0.5rem;
+  margin-bottom: 11px;
+  text-align: left;
 }
 
 .hint {
