--- a/src/pages/Content/ContentPage.module.css
+++ b/src/pages/Content/ContentPage.module.css
@@ -156,6 +156,36 @@
 
 .body p {
   margin: 0;
+  width: fit-content;
+  margin-bottom: 11px;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: left;
+}
+
+.subsectionTitle {
+  margin: 2rem 0 1rem 0;
+  font-size: 1.4rem;
+  font-weight: 600;
+  letter-spacing: -0.01em;
+  color: inherit;
+}
+
+.subsectionTitle:first-child {
+  margin-top: 0;
+}
+
+.cvList {
+  margin: 0;
+  padding-left: 1.5rem;
+  list-style-type: disc;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.cvList li {
+  line-height: 1.7;
 }
 
 .section {
