--- a/src/components/events/HeroEventCard.module.css
+++ b/src/components/events/HeroEventCard.module.css
@@ -31,6 +31,7 @@
   font-size: clamp(1.8rem, 2.5vw, 2.4rem);
   font-weight: 600;
   line-height: 1.15;
+  font-family: var(--font-display);
 }
 
 .actions {
@@ -299,6 +300,7 @@
     justify-content: flex-end;
   }
 }
+
 /* Add these styles to the end of your file or integrate them */
 
 .eventImageWrapper {
